1Learn More tab transition effect  issue fix. 2.Added images . 3.Minor alignment change in header

--- a/src/main/webapp/css/LearnMoreSlider.css
+++ b/src/main/webapp/css/LearnMoreSlider.css
@@ -31,7 +31,7 @@ and open the template in the editor.
 
 }
 #LMwrapperServices{
-    perspective: 1875px;
+    perspective: 2000px;
     width: 512%;
 }
 
